@@ -58,10 +58,12 @@ static char *strdup(const char *str)
 #endif
 
 #ifdef WIN32
-#ifndef __STDC__
-#define __STDC__
-#endif
-#pragma warning(disable:4761)
+#	ifndef __STDC__
+#		define __STDC__
+#	endif
+#	ifdef _MSC_VER
+#		pragma warning(disable:4761)
+#	endif
 #endif
 
 #ifdef __cplusplus
